# config/routes.rb
@@ -3,8 +3,10 @@ Rails.application.routes.draw do
   mount Rswag::Ui::Engine  => "/api-docs"
 
   namespace :api do
-    post   "signup", to: "registrations#create"
     get    "status", to: "status#index"
+    post   "signup", to: "registrations#create"
+    post   'login',  to: 'sessions#create'
+
   end
 
   root to: ->(_) { [200, {"Content-Type" => "text/plain"}, ["API is running 🚀"]] }
